Preserve null move-special result values